# playground-sdd

./: .gitignore  CLAUDE.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  constitution-update-summary.md
.specify/memory/: constitution.md
reusable-library-001-project-framework-api/: Cargo.toml  README.md
reusable-library-001-project-framework-api/src/: lib.rs
reusable-library-001-project-framework-core/: Cargo.toml  README.md
reusable-library-001-project-framework-core/src/: lib.rs  main.rs
reusable-library-001-project-framework-core/src/config/: mod.rs  tests.rs
reusable-library-001-project-framework-core/src/di/: container.rs  mod.rs  tests.rs
reusable-library-001-project-framework-core/src/modules/: library_module.rs  mod.rs  tests.rs
reusable-library-001-project-framework-core/src/utils/: tests.rs
reusable-library-001-project-framework-grpc/: Cargo.toml  README.md
reusable-library-001-project-framework-grpc/src/: lib.rs
specs/001-project-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-reusable-library/: Cargo.toml  README.md  data-model.md  multi_protocol_research.md  plan.md  research.md  spec-driven-development.md  spec.md  tasks.md
specs/001-reusable-library/checklists/: requirements.md
specs/001-reusable-library/contracts/: contracts.md
specs/001-reusable-library/src/: lib.rs
specs/001-reusable-library/src/config/: mod.rs
specs/001-reusable-library/src/di/: annotations.rs  container.rs  injector.rs  mod.rs  registry.rs
specs/001-reusable-library/src/modules/: api.rs  core.rs  grpc.rs  mod.rs
specs/001-reusable-library/src/utils/: error.rs  logging.rs  mod.rs
src/: lib.rs  main.rs
(+4 files in other folders)
