[package]
name = "reusable-library-001-project-framework-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
reusable-library-001-project-framework-core = { path = "../reusable-library-001-project-framework-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tonic = "0.10"
prost = "0.11"