[package]
name = "reusable-library"
version = "0.1.0"
edition = "2021"
description = "Reusable library with Spring Boot style framework"
license = "MIT"
authors = ["Claude Code <noreply@anthropic.com>"]

[lib]
name = "reusable_library"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"